[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/sfx/fight.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/time_potatoes_logo.png" type="Texture" id=2]
[ext_resource path="res://AlternateSpriteColours.tscn" type="PackedScene" id=4]
[ext_resource path="res://IntroScene.gd" type="Script" id=5]
[ext_resource path="res://Resources/GUI_Theme.tres" type="Theme" id=7]
[ext_resource path="res://Resources/GUI_Theme_Font_Large.tres" type="Theme" id=8]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
glow_enabled = true
glow_intensity = 8.0
glow_strength = 1.07
glow_bloom = 1.0
glow_hdr_threshold = 1.95

[sub_resource type="StreamTexture" id=3]
flags = 4

[node name="IntroScene" type="Spatial"]
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.61329, 9.45172 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.583012, 0.48128, 0.654574, -0.771634, 0.0758104, 0.631534, 0.254321, -0.873283, 0.41557, 6.2029, 5.92053, 9.05355 )
shadow_enabled = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="Node2D" type="CanvasLayer" parent="."]

[node name="VersionLabel" type="Label" parent="Node2D"]
margin_left = 872.28
margin_top = 737.495
margin_right = 1081.28
margin_bottom = 785.495
theme = ExtResource( 7 )
text = "VERSION 0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="Node2D/CenterContainer"]
margin_left = 758.0
margin_top = 514.0
margin_right = 1162.0
margin_bottom = 565.0
theme = ExtResource( 8 )
text = "PRESS FIRE TO START!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="Node2D"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Node2D/CenterContainer2"]
visible = false
position = Vector2( 510.704, 125.757 )
scale = Vector2( 0.72836, 1 )
texture = SubResource( 3 )

[node name="AlternateColours" parent="Node2D/CenterContainer2/Sprite" instance=ExtResource( 4 )]
interval = 0.3

[node name="TextureRect" type="TextureRect" parent="Node2D/CenterContainer2"]
margin_left = 960.0
margin_right = 960.0
texture = SubResource( 3 )

[node name="AlternateColours" parent="Node2D/CenterContainer2/TextureRect" instance=ExtResource( 4 )]
interval = 0.3

[node name="CenterContainer3" type="CenterContainer" parent="Node2D"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsLabel2" type="Label" parent="Node2D/CenterContainer3"]
margin_left = 444.0
margin_top = 28.0
margin_right = 1476.0
margin_bottom = 72.0
theme = ExtResource( 7 )
text = "Programmed by Stephen Smith based on the game by Sandy White"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="Node2D"]
position = Vector2( 981.014, 203.187 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
